--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>JR</title>	
+	<style>
+		body{
+			margin:0;
+			padding:0;
+			flex-direction: column;
+			align-items: center;
+		}
+		img {
+		width:auto;
+		max-width: none;
+		}
+		html, body {
+		overflow-x: auto;
+		}
+
+		
+	</style>
 </head>
 <body>
 	<img src="flyer1.jpg">
