--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 			align-items: center;
 		}
 		img {
-		width:auto;
-		max-width: none;
+		width:100vh;
 		}
 		html, body {
 		overflow-x: auto;
