--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 			align-items: center;
 		}
 		img {
-		width:100vh;
-		max-width: 100%;
+		width:100%;
+		display: block;
 		}
 		html, body {
 		overflow-x: auto;
