--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</style>
 </head>
 <body>
-	<img src="flyer1.jpg">
-	<img src="flyer2.jpg">
+	<img src="flyer.3.jpeg">
+	<img src="flyer.4.jpeg">
 </body>
 </html>
