--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 	</style>
 </head>
 <body>
-	<img src="jrwedding.1.jpeg">
+	<img src="0.jpg">
+	<img src="1.jpg">
+	<img src="2.jpg">
+	<img src="3.jpg">
 	
 </body>
 </html>
